cleaned up error handling window.onunload saves changes

--- a/ChromeReader/ChromeReader/popup.html
+++ b/ChromeReader/ChromeReader/popup.html
@@ -26,6 +26,8 @@
         </div>
     </div>
     
+    <h1 id="removed" class="hidden">Subscription Removed!</h1>
+
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <script type="text/javascript" src="popup.js"></script>
 </body>
