--- a/ChromeReader/ChromeReader/background.html
+++ b/ChromeReader/ChromeReader/background.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="google_reader_client.js"></script>
+<script type="text/javascript" src="object_cache.js"></script>
+<script type="text/javascript" src="reader_client.js"></script>
 <script type="text/javascript" src="background.js"></script>
 </head>
 </html>
