offer sign-in page if not signed in

--- a/ChromeReader/ChromeReader/popup.html
+++ b/ChromeReader/ChromeReader/popup.html
@@ -1,11 +1,16 @@
 <html>
 <head>
+    <link type="text/css" rel="stylesheet" href="common.css" />
     <link type="text/css" rel="stylesheet" href="popup.css" />
 </head>
 <body>
     <div id="connecting">Connecting to Google Reader...</div>
     
     <div id="failed" class="hidden">
+    </div>
+    
+    <div id="unauthorized" class="hidden">
+        Please <a href="#" id="signin">sign in</a> to Google Reader.
     </div>
 
     <div id="connected" class="hidden">
