--- a/background.html
+++ b/background.html
@@ -1,8 +1,9 @@
+<!DOCTYPE HTML>
 <html>
 <head>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="js/object_cache.js"></script>
-<script type="text/javascript" src="js/reader_client.js"></script>
-<script type="text/javascript" src="js/background.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="js/object_cache.js"></script>
+    <script type="text/javascript" src="js/reader_client.js"></script>
+    <script type="text/javascript" src="js/background.js"></script>
 </head>
 </html>
