--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,13 @@
     <link type="text/css" rel="stylesheet" href="css/popup.css" />
 </head>
 <body>
-    <div id="connecting" i18n:msg="popup_connecting">Connecting to Google Reader...</div>
+
+    <div id="connecting" i18n:msg="popup_connecting">
+        Connecting to Google Reader...
+    </div>
     
-    <div id="failed" class="hidden">
+    <div id="failed" class="hidden" i18n:msg="page_action_title_failed">
+        Google Reader is not available
     </div>
     
     <div id="unauthorized" class="hidden">
