new folder textbox

--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,6 @@
                 
                 <div>
                     <input id="newFolder" type="text" />
-                    
                     <div id="folders">
                         <ul class="table">
                             <li id="newFolderLI">
@@ -59,7 +58,7 @@
     <script type="text/javascript" src="js/popup_controller.js"></script>
 
     <script type="text/javascript">
-        $(document).ready(function()
+        $(function()
         {
             var bgpage = chrome.extension.getBackgroundPage();
             var chromeReader = bgpage.chromeReader;
