scroll to new folder reader_client refactored object cache removed exclude_globs on google reader

--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,7 @@
             </div>
 
             <div>
-                <label for="folders" i18n:msg="popup_feed_folder">Folder:</label>
+                <label for="folders" i18n:msg="popup_feed_folders">Folders:</label>
                 
                 <div>
                     <input id="newFolder" type="text" />
@@ -53,6 +53,7 @@
     
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="js/jquery.scrollTo-min.js"></script>
     <script type="text/javascript" src="js/ui.checkboxlist.js"></script>
     <script type="text/javascript" src="js/popup_view.js"></script>
     <script type="text/javascript" src="js/popup_controller.js"></script>
